--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="skill-card-body">
           <h3 class="skill-card-title">JavaScript</h3>
           <p class="skill-card-description">
-            I use Javascript to make my websites dynamic and interactive. I use
+            I use JavaScript to make my websites dynamic and interactive. I use
             modern ES6 techniques to develop programs to solve problems using
             logic and conditions.
           </p>
@@ -326,8 +326,7 @@
         <div class="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26434.45921969832!2d-118.38712166404007!3d34.08726470039978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bed921f033e3%3A0x50e44c2d0e8a26a7!2sWest%20Hollywood%2C%20CA!5e0!3m2!1sen!2sus!4v1663187620946!5m2!1sen!2sus"
-            width="100%"
-            height="333"
+            onload="this.width=screen.width;this.height=screen.height"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
