updated the iframe

--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
         <div class="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26434.45921969832!2d-118.38712166404007!3d34.08726470039978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bed921f033e3%3A0x50e44c2d0e8a26a7!2sWest%20Hollywood%2C%20CA!5e0!3m2!1sen!2sus!4v1663187620946!5m2!1sen!2sus"
-            onload="this.width=screen.width;this.height=screen.height"
+            width="500"
+            height="300"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
