fixed spelling error

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h3>React</h3>
           <h3>FTP & Web Hosting</h3>
           <h3>Git & GitHub</h3>
-          <h3>Chrome Devtools</h3>
+          <h3>Chrome DevTools</h3>
           <h3>Code Sandbox</h3>
           <h3>Adobe Creative Suite</h3>
         </div>
