Updated about section with photo and new div

--- a/index.html
+++ b/index.html
@@ -83,18 +83,27 @@
       <div class="all-titles">
         <h2 class="special-title">About Me</h2>
       </div>
-      <div class="about-image">
-        <img src="images/about.jpg" alt="profile picture" />
+        <div class="about-image">
+          <img src="images/about.png" alt="profile picture" onclick="colorChange()"/>
+        </div>
+        <div class="about-description">
+          <p>
+            I'm a front-end web developer with a strong background in teaching and
+            learning.
+            <br />
+            <br />
+            I was a 6th grade science teacher in NYC for 6 years. Now, I'm
+            traveling the country with my husband! At the beginning of our
+            travels, I tutored online while taking courses in front-end web
+            development.
+            <br />
+            <br />
+            Now that I have the skills and tools under my belt, I'm working on
+            freelance gigs that will lead me to a future career in web
+            development. Check out my skills and projects below!
+          </p>
+        </div>
       </div>
-      <div class="about-description">
-        <p>
-          I was a 6th grade science teacher in NYC for 6 years. Now I'm
-          traveling the country with my husband! At the beginning of our
-          travels, I tutored online while taking courses in front-end web
-          development. Now that I have the skills and tools under my belt, I'm
-          working on freelance gigs that will lead me to a future career in web
-          development. Check out my skills and projects below!
-        </p>
         <div class="about-skills">
           <h3>HTML5</h3>
           <h3>CSS</h3>
@@ -106,7 +115,6 @@
           <h3>Code Sandbox</h3>
           <h3>Adobe Creative Suite</h3>
         </div>
-      </div>
     </section>
     <!-- Skills -->
     <div id="skills-section">
