--- a/index.html
+++ b/index.html
@@ -25,34 +25,52 @@
   <body>
     <div class="home-container" id="home">
       <div class="home-pic">
-        <img src="images/greeting.jpg" alt="homepage profile picture" />
+        <img src="images/greeting-outline.jpg" alt="homepage profile picture" />
       </div>
       <div class="greeting">
         <h2 class="home-h2">Hi, I'm Patrick Morrison</h2>
         <h3 class="home-h3">
           Front-end web developer traveling around the U.S.!
         </h3>
-        <h4>
+        <p>
           Choose your color scheme below to add some color to my portfolio site!
-        </h4>
+        </p>
         <div class="color-buttons">
-          <button id="button-1" onclick="colorChange1()">Button 1</button>
-          <button id="button-2" onclick="colorChange2()">Button 2</button>
-          <button id="button-3" onclick="colorChange3()">Button 3</button>
-          <button id="button-4" onclick="colorChange4()">Button 4</button>
+          <img
+            src="images/theme-1.jpg"
+            id="button-1"
+            onclick="colorChange1()"
+          />
+          <img
+            src="images/theme-2.jpg"
+            id="button-2"
+            onclick="colorChange2()"
+          />
+          <img
+            src="images/theme-3.jpg"
+            id="button-3"
+            onclick="colorChange3()"
+          />
+          <img
+            src="images/theme-4.jpg"
+            id="button-4"
+            onclick="colorChange4()"
+          />
         </div>
       </div>
     </div>
     <!-- Header -->
     <div class="hide-all" id="main-page">
       <header id="header">
-        <a href="#" class="logo" onclick="clickLink()">Patrick Morrison</a>
+        <a href="#" id="logo" onclick="clickLink()">Patrick Morrison</a>
         <div class="large-nav">
-          <div class="mynav">
+          <div class="mynav" id="nav">
             <a href="#about" class="nav-link">About</a>
             <a href="#skills-section" class="nav-link">Skills</a>
             <a href="#projects-section" class="nav-link">Projects</a>
-            <a href="#contact-section" class="nav-link">Contact</a>
+            <a href="#contact-section" class="nav-link" id="no-border"
+              >Contact</a
+            >
           </div>
         </div>
         <button class="hamburger" id="my-button" onclick="toggleMenu()">
@@ -77,7 +95,7 @@
       <!-- About -->
       <section id="about">
         <div class="about-image">
-          <img src="images/about.png" alt="profile picture" />
+          <img src="images/about.png" alt="profile picture" id="profile-pic" />
           <div class="social-icons">
             <a href="https://github.com/patgramo" target="_blank" class="icon">
               <i class="fa-brands fa-github"></i>
