Added class removal functions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!-- linking css file -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css" />
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/3dec98cce3.js"
@@ -62,7 +62,12 @@
     <!-- Header -->
     <div class="hide-all" id="main-page">
       <header id="header">
-        <a href="#" id="logo" onclick="clickLink()">Patrick Morrison</a>
+        <a
+          href="#"
+          id="logo"
+          onclick="clickLink(), homepage(), removeColorChange1(), removeColorChange2(), removeColorChange3(), removeColorChange4()"
+          >Patrick Morrison</a
+        >
         <div class="large-nav">
           <div class="mynav" id="nav">
             <a href="#about" class="nav-link">About</a>
@@ -95,7 +100,7 @@
       <!-- About -->
       <section id="about">
         <div class="about-image">
-          <img src="images/about.png" alt="profile picture" id="profile-pic" />
+          <img src="" alt="profile picture" id="profile-pic" />
           <div class="social-icons">
             <a href="https://github.com/patgramo" target="_blank" class="icon">
               <i class="fa-brands fa-github"></i>
@@ -418,7 +423,7 @@
         </div>
       </div>
       <!-- load javascript after loading all html content -->
-      <script src="script.js"></script>
+      <script src="script2.js"></script>
     </div>
   </body>
 </html>
