Added color change option to footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!-- linking css file -->
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style2.css" />
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/3dec98cce3.js"
@@ -422,6 +422,28 @@
           </div>
         </div>
       </div>
+      <footer>
+        <img
+          src="images/theme-1.jpg"
+          class="footer-img"
+          onclick="removeColorChange2(), removeColorChange3(), removeColorChange4(), colorChange1()"
+        />
+        <img
+          src="images/theme-2.jpg"
+          class="footer-img"
+          onclick="removeColorChange1(), removeColorChange3(), removeColorChange4(), colorChange2()"
+        />
+        <img
+          src="images/theme-3.jpg"
+          class="footer-img"
+          onclick="removeColorChange1(), removeColorChange2(), removeColorChange4(), colorChange3()"
+        />
+        <img
+          src="images/theme-4.jpg"
+          class="footer-img"
+          onclick="removeColorChange1(), removeColorChange2(), removeColorChange3(), colorChange4()"
+        />
+      </footer>
       <!-- load javascript after loading all html content -->
       <script src="script2.js"></script>
     </div>
