Updated styling of color buttons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!-- linking css file -->
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style3.css" />
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/3dec98cce3.js"
@@ -63,7 +63,7 @@
     <div class="hide-all" id="main-page">
       <header id="header">
         <a
-          href="#"
+          href=""
           id="logo"
           onclick="clickLink(), homepage(), removeColorChange1(), removeColorChange2(), removeColorChange3(), removeColorChange4()"
           >Patrick Morrison</a
@@ -423,29 +423,37 @@
         </div>
       </div>
       <footer>
-        <img
-          src="images/theme-1.jpg"
+        <a
+          href="#"
           class="footer-img"
           onclick="removeColorChange2(), removeColorChange3(), removeColorChange4(), colorChange1()"
-        />
-        <img
-          src="images/theme-2.jpg"
+        >
+          <img src="images/theme-1.jpg" />
+        </a>
+        <a
+          href="#"
           class="footer-img"
           onclick="removeColorChange1(), removeColorChange3(), removeColorChange4(), colorChange2()"
-        />
-        <img
-          src="images/theme-3.jpg"
+        >
+          <img src="images/theme-2.jpg" />
+        </a>
+        <a
+          href="#"
           class="footer-img"
           onclick="removeColorChange1(), removeColorChange2(), removeColorChange4(), colorChange3()"
-        />
-        <img
-          src="images/theme-4.jpg"
+        >
+          <img src="images/theme-3.jpg" />
+        </a>
+        <a
+          href="#"
           class="footer-img"
           onclick="removeColorChange1(), removeColorChange2(), removeColorChange3(), colorChange4()"
-        />
+        >
+          <img src="images/theme-4.jpg" />
+        </a>
       </footer>
       <!-- load javascript after loading all html content -->
-      <script src="script2.js"></script>
+      <script src="script3.js"></script>
     </div>
   </body>
 </html>
